Eman - Added code verification function

--- a/Bagahe/Bagahe/Bagahe/Views/ForgotPasswordView.xaml
+++ b/Bagahe/Bagahe/Bagahe/Views/ForgotPasswordView.xaml
@@ -37,18 +37,25 @@
         <ContentView Padding="10">
           <Image Source="bag_logov1.png" HeightRequest="140"/>
         </ContentView>
-        <Label Text="Forgot Password?" 
+        <Label Text="{Binding Header}" 
                FontSize="20"
                XAlign="Center"/>
-        <Label Text="We just need your registered email to sent you password reset instructions."
+        <Label Text="{Binding Description}"
                XAlign="Center"/>
-        <ContentView Padding="0,30,0,0">
-          <Label Text="{Binding ErrorMsg}"
-                 Style="{StaticResource errorMsg}"/>
+        <ContentView Padding="20" IsVisible="{Binding IsVisibleEmailLabel}">
+          <Label Text="{Binding EmailAdd}"
+                 FontSize="20"
+                 XAlign="Center"
+                 TextColor="Blue"/>
         </ContentView>
-        <Label Text="Email"/>
-        <Entry Text="{Binding EmailAdd}"/>
-        <Button Text="Reset Password"
+        <Label Text="{Binding ErrorMsg}"
+                 Style="{StaticResource errorMsg}"/>
+        <Label Text="Email"
+                IsVisible="{Binding IsVisibleEmailEntry}"/>
+        <Entry Text="{Binding EmailAdd}"
+                x:Name="EmailEntry"
+                 IsVisible="{Binding IsVisibleEmailEntry}"/>
+        <Button Text="Send Code"
                 Style="{StaticResource buttonProperty}"
                 Command="{Binding ResetPasswordCommand}"/>
         <Button Text="Back"
