--- a/Bagahe/Bagahe/Bagahe/Views/SuccessPageView.xaml
+++ b/Bagahe/Bagahe/Bagahe/Views/SuccessPageView.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Bagahe.Views.SignupResultView">
+             x:Class="Bagahe.Views.SuccessPageView">
   <ContentPage.Padding>
     <OnPlatform x:TypeArguments="Thickness"
                 iOS="20, 40, 20, 20"
@@ -12,7 +12,7 @@
     <ResourceDictionary>
       <Style x:Key="successProperty" TargetType="Label">
         <Setter Property="TextColor" Value="Green" />
-        <Setter Property="FontSize" Value="30" />
+        <Setter Property="FontSize" Value="20" />
       </Style>
       <Style x:Key="buttonProperty" TargetType="Button">
         <Setter Property="BackgroundColor" Value="#2196f3"/>
@@ -26,10 +26,14 @@
                      HorizontalOptions="Center"
                      Orientation="Vertical"
                      Spacing="4">
-      <Image Source="success_icon.png" HeightRequest="150"/>
-
-      <Label Text="SUCCESS!!!" 
-             Style="{StaticResource successProperty}"/>
+      <ContentView Padding="30">
+        <Image Source="bag_logov1.png" HeightRequest="150"/>
+      </ContentView>
+      <ContentView Padding="20">
+        <Label Text="{Binding Message}"
+               XAlign="Center"
+               Style="{StaticResource successProperty}"/>
+      </ContentView>
       <Button Text="Sign in"
                 Style="{StaticResource buttonProperty}"
                 Command ="{Binding SignInCommand}"/>
