--- a/Bagahe/Bagahe/Bagahe/Views/NewPasswordView.xaml
+++ b/Bagahe/Bagahe/Bagahe/Views/NewPasswordView.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Bagahe.Views.NewPasswordView">
+             x:Class="Bagahe.Views.NewPasswordView"
+             Title="Change Password">
   <ContentPage.Padding>
     <OnPlatform x:TypeArguments="Thickness"
                 iOS="20, 40, 20, 20"
